Bug Fixes
Fixed:
- Friends Online Counter from Zerthox being misaligned
- Part of titlebar being discolored after Discord update
- Last message in a message group's bubbles matching to others
- Improved plugin compatibility w/ buttons in the toolbar (e.g. Anti-GhostPing)

--- a/0-source/0-base/_global-class-variables.scss
+++ b/0-source/0-base/_global-class-variables.scss
@@ -32,6 +32,7 @@
     $chat-channelTextAreaInner: '.inner-zqa7da';
     $chat-guildMenu: '.menu-Sp6bN1';
     $chat-guildMenuItem: '.item-1GzJrl';
+    $chat-headerButtonIcon: '.icon-22AiRD';
     $chat-headerButtonIconWrapper: '.iconWrapper-2OrFZ1';
     $chat-headerIconBadge: '.iconBadge-qZ4Ksk';
     $chat-jumpToPresentBar: '.jumpToPresentBar-9P20AM';
@@ -48,6 +49,7 @@
     $chat-typing: '.typing-2GQL18';
 //Client
     $client-actionButton: '.button-38aScr';
+    $client-bg: '.bg-h5JY_x';
     $client-buttonAccentFilled: '.colorBrand-3pXr91';
     $client-buttonFilled: '.lookFilled-1Gx00P';
     $client-buttonNormal: '.buttonSize-2Pmk-w';
@@ -158,12 +160,12 @@
     $message-dividerEnabled: '.dividerEnabled-2TTlcf';
     $message-dividerRed: '.dividerRed-MKoLlr';
     $message-embed: '.embed-IeVjo6';
+    $message-groupContainer: '.container-1YxwTf';
     $message-isCompact: '.isCompact-1hsne1';
     $message-isMentioned: '.isMentioned-N-h9aa';
     $message-isMentionedCozy: '.isMentionedCozy-3isp7y';
     $message-markup: '.markup-2BOw-j';
     $message-timestampCompact: '.timestampCompact-MHgFLv';
-    $message: '.message-1PNnaP';
 // Messages Popout
     $messagesPopout-wrap: '.messagesPopoutWrap-1MQ1bW';
 // Modal
