--- a/0-source/1-parts/_chat.scss
+++ b/0-source/1-parts/_chat.scss
@@ -91,7 +91,7 @@
     bottom: 7px;
 }
 
-#{$message-content} {
+#{$message-groupContainer} > div {
     margin-bottom: .2em;
 }
 
@@ -134,7 +134,7 @@
     }
 } 
 
-#{$message}:last-of-type #{$message-markup} {
+#{$message-groupContainer} > div:last-of-type #{$message-markup} {
     border-radius: 0 inRem(10px) inRem(10px) inRem(10px);
 }
 
@@ -155,11 +155,11 @@
 
 
 #{$message-isMentionedCozy} #{$message-markup},
-#{$message}:last-of-type #{$message-isMentionedCozy} #{$message-markup} {
+#{$message-groupContainer} > div:last-of-type #{$message-isMentionedCozy} #{$message-markup} {
     border-radius: 0 inRem(10px) inRem(10px) 0;
 }
 
-#{$message}:last-of-type #{$message-isMentionedCozy} #{$message-markup}::after {
+#{$message-groupContainer} > div:last-of-type #{$message-isMentionedCozy} #{$message-markup}::after {
     border-radius: 0 0 0 inRem(10px);
 }
 
